done basic add blog
