# server/webServer.go
@@ -1,11 +1,12 @@
 package server
 
 import (
+	_ "mo2/docs"
+	"mo2/server/controller"
+
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	_ "mo2/docs"
-	"mo2/server/controller"
 )
 
 func RunServer() {
@@ -27,6 +28,10 @@ func RunServer() {
 			accounts.DELETE(":id", c.DeleteAccount)
 			accounts.PATCH(":id", c.UpdateAccount)
 			accounts.POST(":id/images", c.UploadAccountImage)*/
+		}
+		blogs := v1.Group("/blogs")
+		{
+			blogs.POST("", c.PublishBlog)
 		}
 	}
 
